<resources>
    <string name="app_name">Note Taker</string>
    <string name="action_settings">Settings</string>
    <string name="record_button">Record</string>
    <string name="files_button">Recordings</string>
    <string name="write_button">Write</string>
    <string name="main_logo_description">Pencil Logo</string>
    <string name="shoot_button">shoot</string>
    <string name="draw_button">draw</string>
    <string name="title_activity_audio_files">Audio Notes</string>
    <string name="title_activity_text_files">Text Note</string>
    <string name="title_activity_text_files_list">Text Notes</string>
    <string name="title_activity_camera">Photo Note</string>
    <string name="title_activity_photos">Photo Notes</string>
    <string name="title_activity_single_photo">SinglePhotoActivity</string>
    <string name="title_activity_draw">Drawing Notes </string>
    <string name="title_activity_drawings">DrawingsActivity</string>
    <string name="title_activity_single_drawing">SingleDrawingActivity</string>
</resources>
