<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_logo_description"
        android:id="@+id/imageView"
        android:background="@drawable/pencil_background"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_button"
        android:id="@+id/buttonWrite"
        android:layout_marginTop="81dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_button"
        android:id="@+id/buttonRecord"
        android:layout_below="@+id/buttonWrite"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoot_button"
        android:id="@+id/buttonShoot"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/buttonRecord"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_button"
        android:id="@+id/buttonDraw"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/buttonShoot"
        android:layout_alignParentStart="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files_button"
        android:id="@+id/buttonList"
        android:layout_above="@+id/buttonShoot"
        android:layout_toEndOf="@+id/buttonRecord"
        android:layout_marginStart="23dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="drawings"
        android:id="@+id/drawingsButton"
        android:layout_alignTop="@+id/buttonDraw"
        android:layout_alignStart="@+id/buttonList"/>

</RelativeLayout>
